test/types/records/comparisons/typeAndArrayFields/compareArrayTypeFieldOnly-ordered.good
compareArrayTypeFieldOnly-ordered.chpl:8: error: ordered comparisons not supported by default on records with type fields that have runtime type
